Add initial project structure and styles for homepage layout

--- a/scss/utils/_variables.scss
+++ b/scss/utils/_variables.scss
@@ -1,5 +1,5 @@
 // Font Family
-$font-family-primary: "Jost", sans-serif;
+$font-family-primary: "Jost", Arial, Helvetica, sans-serif;
 
 // Headings
 $heading-1-font-size: 48px;
