--- a/scss/base/_reset.scss
+++ b/scss/base/_reset.scss
@@ -36,10 +36,10 @@ body {
   display: flex;
   flex-direction: column;
   height: 100%;
-  // font-size: ;
-  // font-family: ;
-  // font-weight: ;
-  // line-height: ;
+  font-size: $body-font-size;
+  font-family: $font-family-primary;
+  font-weight: $body-font-weight;
+  line-height: $body-line-height;
 }
 
 main {
@@ -53,4 +53,12 @@ main {
   margin-right: auto;
   padding-left: 50px;
   padding-right: 50px;
+}
+
+@media screen and (max-width: 500px) {
+  .container {
+    max-width: 1189px;
+    padding-left: 39;
+    padding-right: 39px;
+  }
 }
