Refactor SCSS for hero box by removing comments in _home.scss

--- a/scss/pages/_home.scss
+++ b/scss/pages/_home.scss
@@ -56,8 +56,8 @@
 .hero__box {
   position: relative;
   width: 100%;
-  height: 600px; /* Tasvir balandligini moslash uchun */
-  background-color: #f26b6b; /* Orqa fon rangi */
+  height: 600px;
+  background-color: #f26b6b;
   overflow: hidden;
 }
 
