and social media icons; adjust container padding for responsiveness

--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -49,6 +49,7 @@ label {
     height: 96px;
     padding-top: 35px;
     padding-bottom: 34px;
+    z-index: 10000000000000000;
     // background-color: $color-black;
   }
 
