--- a/scss/base/_reset.scss
+++ b/scss/base/_reset.scss
@@ -48,17 +48,23 @@ main {
 
 .container {
   width: 100%;
-  max-width: 1211px; /* you need change it  */
+  max-width: 1211px;
   margin-left: auto;
   margin-right: auto;
   padding-left: 50px;
   padding-right: 50px;
 }
 
+@media screen and (max-width: 768px) {
+  .container {
+    padding-left: 3.9rem;
+    padding-right: 3.9rem;
+  }
+}
+
 @media screen and (max-width: 500px) {
   .container {
-    max-width: 1189px;
-    padding-left: 39;
-    padding-right: 39px;
+    padding-left: 2.4rem;
+    padding-right: 2.4rem;
   }
 }
