--- a/scss/pages/_home.scss
+++ b/scss/pages/_home.scss
@@ -3,7 +3,7 @@
 
 .hero {
   padding-bottom: 8rem;
-  background-image: url("../src/images/shared/desktop/bg-pattern-leaf.svg");
+  // background-image: url("../src/images/shared/desktop/bg-pattern-leaf.svg");
   background-repeat: no-repeat;
   background-size: contain;
   background-position: left 0 top 147px;
@@ -48,7 +48,7 @@
   position: absolute;
   width: 100%;
   z-index: 500;
-  background-image: url("../src/images/home/desktop/bg-pattern-hero-home.svg");
+
   background-repeat: no-repeat;
   background-size: contain;
 }
@@ -57,7 +57,7 @@
   position: relative;
   width: 100%;
   height: 600px;
-  background-color: #f26b6b;
+  bottom: -70px;
   overflow: hidden;
 }
 
@@ -65,6 +65,7 @@
   position: absolute;
   top: 50%;
   left: 50%;
+  bottom: -10px;
   transform: translate(-50%, -50%);
   width: 572px;
   height: 540px;
@@ -75,23 +76,83 @@
   height: auto;
 }
 
-@media screen and (max-width: 500px) {
+@media screen and (max-width: 768px) {
   .hero {
-    padding-top: 8rem;
-    margin-top: 70px;
+    padding-left: 3.9rem;
+    padding-right: 4.9rem;
+    // padding-bottom:
+    margin-top: 0;
   }
 
   .hero__container {
     flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding-left: 3.9rem;
+  }
+
+  .hero__content {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .hero__title {
+    text-align: center;
+  }
+
+  .hero__subtitle {
+    text-align: center;
+  }
+
+  .hero__link {
+    text-align: center;
   }
 
   .hero__box__image {
-    margin: 0;
-    margin-bottom: -100px;
     width: 100%;
+    height: auto;
+    margin-top: -190px;
+  }
+}
+
+@media screen and (max-width: 500px) {
+  .hero {
+    padding: 0;
+    padding-top: 8rem;
+    margin-top: 70px;
+    background-image: url("../src/images/home/desktop/bg-pattern-hero-home.svg");
+    background-repeat: no-repeat;
+    background-size: contain;
+  }
+
+  .hero__title {
+    padding-top: 0;
+    margin-top: 8rem;
+    width: 100%;
+    font-size: 3.2rem;
+    text-align: center;
+  }
+
+  .hero__subtitle {
+    margin-top: 1.4rem;
+    text-align: center;
+  }
+
+  .hero__link {
+    margin-top: 2.4rem;
+    margin-bottom: 0;
+  }
+
+  .hero__box__image {
+    width: 100%;
+    height: auto;
+    margin-top: 8rem;
   }
 
   .hero__box {
+    bottom: 0;
     background-position: center right -100px;
   }
 }
@@ -99,8 +160,6 @@
 .project {
   padding-top: 8rem;
   padding-bottom: 8rem;
-}
-.project__container {
 }
 
 .project__box {
@@ -116,25 +175,46 @@
   row-gap: 2.4rem;
 }
 
-.project__box__card:nth-child(1) {
+.project__box__card__link:nth-child(1) {
   grid-area: one;
   background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
     url("../src/images/home/desktop/image-web-design-large.jpg");
+  &:hover {
+    background-image: linear-gradient(
+        rgba(231, 129, 107, 0.5),
+        rgba(231, 129, 107, 0.5)
+      ),
+      url("../src/images/home/desktop/image-web-design-large.jpg");
+  }
 }
 
-.project__box__card:nth-child(2) {
+.project__box__card__link:nth-child(2) {
   grid-area: two;
   background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
     url("../src/images/home/desktop/image-app-design.jpg");
+  &:hover {
+    background-image: linear-gradient(
+        rgba(231, 129, 107, 0.7),
+        rgba(231, 129, 107, 0.7)
+      ),
+      url("../src/images/home/desktop/image-app-design.jpg");
+  }
 }
 
-.project__box__card:nth-child(3) {
+.project__box__card__link:nth-child(3) {
   grid-area: three;
-  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
+  background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)),
     url("../src/images/home/desktop/image-graphic-design.jpg");
+  &:hover {
+    background-image: linear-gradient(
+        rgba(231, 129, 107, 0.7),
+        rgba(231, 129, 107, 0.7)
+      ),
+      url("../src/images/home/desktop/image-graphic-design.jpg");
+  }
 }
 
-.project__box__card {
+.project__box__card__link {
   color: #ffffff;
   display: flex;
   align-items: center;
@@ -142,6 +222,7 @@
   flex-direction: column;
   width: 100%;
   border-radius: 15px;
+  transition: 0.7s;
 }
 
 .project__box__card__title {
@@ -166,7 +247,7 @@
   height: 8px;
 }
 
-@media screen and (max-width: 500px) {
+@media screen and (max-width: 768px) {
   .project__box {
     grid-template-columns: repeat(1, 1fr);
     grid-template-rows: repeat(4, 200px);
@@ -176,11 +257,174 @@
       "two"
       "three";
   }
-
   .project__box__card {
     width: 100%;
     padding-top: 5.3rem;
     padding-bottom: 5.3rem;
     text-align: center;
+  }
+}
+
+@media screen and (max-width: 500px) {
+}
+
+.feature {
+  padding-top: 8rem;
+  padding-bottom: 8rem;
+}
+.feature__container {
+}
+
+.feature__content {
+  display: flex;
+  justify-content: space-between;
+}
+.feature__box {
+  width: 100%;
+  max-width: 350px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  background-image: url("../src/images/home/desktop/backround-oval.svg");
+  background-repeat: no-repeat;
+  background-position: center top;
+}
+.feature__box__image {
+  margin-bottom: 6.8rem;
+}
+.feature__box__title {
+  font-size: $heading-3-font-size;
+  line-height: $heading-3-line-height;
+  letter-spacing: $heading-3-letter-spacing;
+  font-weight: 500;
+  text-align: center;
+  color: $color-dark-grey;
+}
+.feature__box__subtitle {
+  margin-top: 3.2rem;
+  text-align: center;
+  color: $color-dark-grey;
+}
+
+@media screen and (max-width: 768px) {
+  .feature {
+    padding-top: 6rem;
+    padding-bottom: 6rem;
+  }
+
+  .feature__content {
+    flex-direction: column;
+  }
+
+  .feature__box {
+    width: 100%;
+    max-width: 100%;
+    flex-direction: row;
+    background-position: left top;
+    gap: 5.5rem;
+  }
+
+  .feature__box__title {
+    text-align: left;
+  }
+
+  .feature__box__subtitle {
+    text-align: left;
+  }
+}
+
+@media screen and (max-width: 500px) {
+  .feature__box {
+    flex-direction: column;
+    gap: 4.8rem;
+    background-position: center top;
+  }
+
+  .feature__box__image {
+    margin-bottom: 0;
+  }
+
+  .feature__box__title {
+    text-align: center;
+  }
+
+  .feature__box__subtitle {
+    text-align: center;
+    margin-bottom: 8rem;
+    width: 100%;
+    max-width: 327px;
+  }
+}
+
+.about {
+  padding-top: 8rem;
+  padding-bottom: 8rem;
+  position: relative;
+  z-index: 2;
+}
+.about__container {
+  padding-top: 7.2rem;
+  padding-bottom: 4.6rem;
+  border-radius: 15px;
+  display: flex;
+  background-color: $color-peach;
+  align-items: center;
+  background-image: url("../src/images/home/desktop/bg-pattern-hero-home.svg");
+  background-size: contain;
+  background-repeat: repeat;
+  background-position: top -100px left;
+  // margin-bottom: -170px;
+}
+
+.about__box {
+  max-width: 459px;
+  color: #ffffff;
+}
+.about__box__titile {
+  font-size: $heading-2-font-size;
+  line-height: $heading-2-line-height;
+  font-weight: 500;
+}
+.about__box__subtitle {
+  font-weight: 400;
+}
+.btn-dark {
+}
+.about__link {
+  margin-left: auto;
+  height: 56px;
+}
+
+@media screen and (max-width: 768px) {
+  .about__container {
+    width: 100%;
+    padding-top: 5.7rem;
+    padding-bottom: 5.7rem;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .about__box {
+    text-align: center;
+  }
+
+  .about__box__titile {
+    text-align: center;
+    width: 100%;
+    max-width: 335px;
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+  .about__box__subtitle {
+    width: 100%;
+    max-width: 573px;
+  }
+
+  .about__link {
+    margin-top: 3.2rem;
+    margin-left: 0;
   }
 }
