Add project pages and styles for App Design and Graphic Design; update navigation links and adjust footer styles

--- a/scss/_main.scss
+++ b/scss/_main.scss
@@ -19,4 +19,9 @@
 
 // Pages
 @import "pages/home";
+@import "pages/about";
 @import "pages/contact";
+@import "pages/locations";
+@import "pages/project/WebDesign";
+@import "pages/project/AppDesign";
+@import "pages/project/GraphicDesign";
