--- a/scss/layout/_footer.scss
+++ b/scss/layout/_footer.scss
@@ -1,5 +1,5 @@
 .footer {
-  margin-top: -176px;
+  // margin-top: -176px;
   position: relative;
   z-index: 1;
   padding-top: 8rem;
@@ -115,45 +115,6 @@ svg:hover path {
   .footer__content__social {
     margin-left: 0;
   }
-
-  //   .footer__image {
-  //     margin-bottom: 3.2rem;
-  //   }
-
-  //   .footer__sitenav {
-  //     margin-left: 0;
-  //     margin-top: 3.2rem;
-  //   }
-
-  //   .footer__sitenav__link {
-  //     margin-left: auto;
-  //   }
-
-  //   .footer__box {
-  //     flex-direction: column;
-  //     align-items: center;
-  //   }
-
-  //   .footer__sitenav__list {
-  //     margin-right: auto;
-  //     text-align: center;
-  //     flex-direction: column;
-  //   }
-
-  //   .footer__content {
-  //     width: 100%;
-  //     max-width: 327px;
-  //     display: flex;
-  //     flex-direction: column;
-  //     justify-content: center;
-  //     align-items: center;
-  //   }
-
-  //   .footer__content__box {
-  //     display: flex;
-  //     align-items: center;
-  //     justify-content: center;
-  //   }
 
   .footer__divider {
     display: none;
