--- a/scss/base/_reset.scss
+++ b/scss/base/_reset.scss
@@ -51,12 +51,15 @@ main {
   max-width: 1211px;
   margin-left: auto;
   margin-right: auto;
-  padding-left: 50px;
-  padding-right: 50px;
+  padding-left: 5rem;
+  padding-right: 5rem;
 }
 
 @media screen and (max-width: 768px) {
   .container {
+    // max-width: 100%;
+    // margin-left: 3.9rem;
+    // margin-right: 3.9rem;
     padding-left: 3.9rem;
     padding-right: 3.9rem;
   }
