--- a/scss/pages/_home.scss
+++ b/scss/pages/_home.scss
@@ -1,6 +1,3 @@
-.main {
-}
-
 .hero {
   padding-bottom: 8rem;
   // background-image: url("../src/images/shared/desktop/bg-pattern-leaf.svg");
@@ -79,7 +76,7 @@
 @media screen and (max-width: 768px) {
   .hero {
     padding-left: 3.9rem;
-    padding-right: 4.9rem;
+    padding-right: 3.9rem;
     // padding-bottom:
     margin-top: 0;
   }
@@ -158,114 +155,137 @@
 }
 
 .project {
-  padding-top: 8rem;
-  padding-bottom: 8rem;
+}
+.project__container {
 }
 
 .project__box {
+  height: 640px;
   display: grid;
   grid-template-columns: repeat(2, 1fr);
-  grid-template-rows: repeat(2, 1fr);
-  width: 100%;
-  height: 640px;
   grid-template-areas:
     "one two"
     "one three";
   column-gap: 3rem;
   row-gap: 2.4rem;
 }
-
-.project__box__card__link:nth-child(1) {
+.project__link {
+  border-radius: 15px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 2.4rem;
+  color: $color-white;
+}
+.project__link:nth-child(1) {
   grid-area: one;
   background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
     url("../src/images/home/desktop/image-web-design-large.jpg");
+  background-repeat: no-repeat;
+  background-size: contain;
+
   &:hover {
+    background-image: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)),
+      url("../src/images/home/desktop/image-web-design-large.jpg");
+  }
+
+  &:active {
     background-image: linear-gradient(
-        rgba(231, 129, 107, 0.5),
-        rgba(231, 129, 107, 0.5)
+        rgba(231, 129, 107, 0.8),
+        rgba(231, 129, 107, 0.8)
       ),
       url("../src/images/home/desktop/image-web-design-large.jpg");
   }
 }
-
-.project__box__card__link:nth-child(2) {
+.project__link:nth-child(2) {
   grid-area: two;
   background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
     url("../src/images/home/desktop/image-app-design.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+
   &:hover {
+    background-image: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)),
+      url("../src/images/home/desktop/image-app-design.jpg");
+  }
+
+  &:active {
     background-image: linear-gradient(
-        rgba(231, 129, 107, 0.7),
-        rgba(231, 129, 107, 0.7)
+        rgba(231, 129, 107, 0.8),
+        rgba(231, 129, 107, 0.8)
       ),
       url("../src/images/home/desktop/image-app-design.jpg");
   }
 }
-
-.project__box__card__link:nth-child(3) {
+.project__link:nth-child(3) {
   grid-area: three;
-  background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)),
+  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
     url("../src/images/home/desktop/image-graphic-design.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+
   &:hover {
+    background-image: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)),
+      url("../src/images/home/desktop/image-graphic-design.jpg");
+  }
+
+  &:active {
     background-image: linear-gradient(
-        rgba(231, 129, 107, 0.7),
-        rgba(231, 129, 107, 0.7)
+        rgba(231, 129, 107, 0.8),
+        rgba(231, 129, 107, 0.8)
       ),
       url("../src/images/home/desktop/image-graphic-design.jpg");
   }
 }
 
-.project__box__card__link {
-  color: #ffffff;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-direction: column;
-  width: 100%;
-  border-radius: 15px;
-  transition: 0.7s;
-}
-
-.project__box__card__title {
+.project__box__title {
   font-weight: 500;
   font-size: $heading-2-font-size;
   line-height: $heading-2-line-height;
   letter-spacing: $heading-2-letter-spacing;
+  text-transform: uppercase;
 }
 
-.project__box__card__subtitle {
+.project__box__subtitle {
+  font-size: 1.5rem;
+  line-height: 1.46;
+  font-weight: 500;
+  letter-spacing: 5px;
+  text-transform: uppercase;
 }
 
-.project__box__car__arrow::after {
+.project__box__icon {
   background-image: url("../src/images/home/desktop/arrow.svg");
-  background-repeat: no-repeat;
-  background-size: contain;
   content: "";
-  display: inline-block;
-  align-items: center;
-  justify-content: center;
   width: 4px;
   height: 8px;
+  display: inline-block;
+  gap: 2.1rem;
+  background-repeat: no-repeat;
+  align-items: center;
+  justify-content: center;
+  background-size: cover;
 }
 
 @media screen and (max-width: 768px) {
+  .project {
+    padding-top: 6rem;
+  }
+
   .project__box {
-    grid-template-columns: repeat(1, 1fr);
-    grid-template-rows: repeat(4, 200px);
-    width: 100%;
+    height: auto;
+    grid-template-columns: 1fr;
     grid-template-areas:
-      "one"
-      "two"
+      "one "
+      "two "
       "three";
   }
-  .project__box__card {
-    width: 100%;
-    padding-top: 5.3rem;
-    padding-bottom: 5.3rem;
-    text-align: center;
-  }
-}
 
-@media screen and (max-width: 500px) {
+  .project__link {
+    width: 100%;
+    padding: 5.3rem 0;
+  }
 }
 
 .feature {
@@ -358,6 +378,7 @@
 }
 
 .about {
+  margin-bottom: -176px;
   padding-top: 8rem;
   padding-bottom: 8rem;
   position: relative;
@@ -397,6 +418,11 @@
 }
 
 @media screen and (max-width: 768px) {
+  .about {
+    padding-left: 3.9rem;
+    padding-right: 3.9rem;
+  }
+
   .about__container {
     width: 100%;
     padding-top: 5.7rem;
@@ -426,5 +452,12 @@
   .about__link {
     margin-top: 3.2rem;
     margin-left: 0;
+  }
+
+  @media screen and (max-width: 500px) {
+    .about {
+      padding-left: 2.4rem;
+      padding-right: 2.4rem;
+    }
   }
 }
